--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,8 @@
     "description": "Credit Card validation extension for Yii2 framework",
     "keywords": ["yii2", "credit card", "validation", "validator"],
     "type": "yii2-extension",
-	"version": "1.0.2",
-    "license": "BSD",
+	"version": "1.0.3",
+    "license": "BSD-3-Clause",
     "support": {
         "issues": "https://github.com/RAvenGEr/Yii2-CCValidator/issues",
         "source": "https://github.com/RAvenGEr/Yii2-CCValidator"
